[package]
name = "gdbstub-step-bug"
version = "0.1.0"
edition = "2018"

[features]
default = []

stub_arm = []
stub_x86 = []
stub_mips = []

[dependencies]
gdbstub_arch = { git = "https://github.com/daniel5151/gdbstub.git", branch = "dev/0.6" }
gdbstub = { git = "https://github.com/daniel5151/gdbstub.git", branch = "dev/0.6" }

log = "0.4"
pretty_env_logger = "0.4"
